@@ -25,3 +25,10 @@ targetCompatibility = 1.8
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+tasks.withType(Test) {
+    jvmArgs([
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
+    ])
+}
